stop input looking weird on iOS

--- a/sites/all/themes/truclean/src/assets/scss/_forms.scss
+++ b/sites/all/themes/truclean/src/assets/scss/_forms.scss
@@ -68,3 +68,8 @@
 .form-required {
 	@extend .error;
 }
+
+.search-box-input[type=search] {
+	-webkit-appearance: none;
+	border: 0;
+}
